<resources>
    <string name="app_name">Datsun</string>
    <!--Welcome strings-->
    <string name="welcome">Welcome!</string>
    <string name="welcome_Descri">Cum socis natoque penatibus et magns dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!--Login strings-->
    <string name="login_des">Maecenas sed diam egetrisus varius blandit sit amet non magna.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot"><u>Forgot Password?</u></string>

    <!--SendPassword strings-->
    <string name="sendpass_des">Maecenas sed diam egetrisus varius blandit sit amet non magna.</string>
    <string name="sendpass">Send Password</string>
    <string name="email">Email</string>

    <!--SignUp strings-->
    <string name="sign_up_des">Maecenas sed diam egetrisus varius blandit sit amet non magna.</string>
    <string name="nick_name">Nick Name</string>
    <string name="eadress">E-mail address</string>
    <string name="retype_pass">Retype password</string>
    <string name="phone_number">Phone number</string>
    <string name="continu">Continue</string>

    <!--Dialog SendPassword-->
    <string name="dialogPassText">We have sent the password to you mail account</string>
    <string name="ok">Ok</string>

    <!--Dialog SignUp-->
    <string name="dialogSignUp">This email already exists. Log in to finish the sign up</string>
    <string name="cancelar">Cancelar</string>

    <!--SecondSignUp-->
    <string name="vin_number">Vin number</string>
    <string name="car_model">Car model</string>
    <string name="serial_number">Serial number</string>
    <string name="dealer_ship">Dealer Ship</string>
    <string name="autocall">Autocall Center</string>
    <string name="persona">Personal information</string>
    <string name="full_name">Full name</string>
    <string name="car_owner">Car owner</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="location">Location</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="data_protection">Data protection act</string>
    <string name="legal">Legal</string>
    <string name="disclaimer">Disclaimer</string>

</resources>
