<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.desarrollo.datsun.SignUp"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtSignUpDes"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_des"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNickName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:hint="@string/nick_name"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpDes"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eadress"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etNickName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etSignupPass"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etRetype"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/retype_pass"
        android:inputType="textPassword"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/etSignupPass"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        android:maxLength="9"
        app:layout_constraintTop_toBottomOf="@+id/etRetype"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnContinu"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/continu"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

</android.support.constraint.ConstraintLayout>
