<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.desarrollo.datsun.Login"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtLoginDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:text="@string/login_des"
        android:textAlignment="center"
        android:textSize="15dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginDes"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etUsername" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/login"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/forgotPass"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btnLoginLogin"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginLogin" />

</android.support.constraint.ConstraintLayout>
